# context-agent

./: .gitignore  API  README.md  activate-venv.bat  activate_venv.bat  build-and-publish-vector-index.bat  ollama-setup.bat  pyproject.toml  requirements.txt  run-contextagent.bat  setup-hf-token.bat  setup.bat
src/context_agent/: __main__.py  main.py
src/context_agent/api/: server.py
src/context_agent/config/: confluence.py  ollama.py  rag_query.py  vector_index.py  vectorization.py
src/context_agent/rag/: embeddings.py  retriever.py
src/context_agent/sources/: confluence.py
src/context_agent/ui/static/: app.js  index.html  styles.css
